tests/baselines/reference/asyncFunctionDeclaration7_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration7_es6.ts(3,26): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration7_es6.ts (1 errors) ====
    async function bar(): Promise<void> {
      // 'await' here is an identifier, and not a yield expression.
      async function foo(a = await): Promise<void> {
                             ~~~~~
!!! error TS2304: Cannot find name 'await'.
      }
    }